@@ -1,6 +1,4 @@
 # encoding: utf-8
-from zope.component import getUtility
-from plone.registry.interfaces import IRegistry
 from zope.app.component.hooks import getSite
 from Products.Five.browser import BrowserView
 
@@ -9,10 +7,9 @@ class getJSON(BrowserView):
 
 	def __call__(self):
 		"""Return the JSON."""
-		registry = getUtility(IRegistry)
+		registry = getSite().portal_registry
 		if "name" in self.request:
 			name = "collective.markitup." + self.request["name"]
 			if name in registry:
-				print "Retrieved %s from registry" % name
 				return registry[name]
 		return "{ }"
